--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,8 @@ body{
 .panelBody{
   position:relative;
   z-index:1;
-  padding:16px 18px 18px 18px;
-  height:calc(100% - 54px);
+  padding:18px;
+  height:100%;
   min-height:0;
   display:flex;
   flex-direction:column;
